添加了短信广播监听功能
在模拟器上短信接收成功，短信拦截未成功。在真机调试中短信接收报错。

--- a/ShanxunGetPwd/app/src/main/res/values/strings.xml
+++ b/ShanxunGetPwd/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">自动获取闪讯密码</string>
     <string name="btn_getPwd">获取!</string>
     <string name="tip_waitToClick">点击按钮获取闪讯密码。\n（请确保当前运营商为电信）</string>
+    <string name="madeBy">Made By ZJD</string>
 </resources>
